--- a/lm-tabelas01/index.html
+++ b/lm-tabelas01/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela-01-clima</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://erikflowers.github.io/weather-icons/css/weather-icons.css">
 </head>
 <body>
     <table>
@@ -20,43 +21,43 @@
         <tbody>
             <tr>
                 <td>Domingo</td>
-                <td>icon</td>
+                <td><i class="wi wi-day-cloudy"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
             <tr>
                 <td>Segunda</td>
-                <td>icon</td>
+                <td><i class="wi wi-day-sunny"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
             <tr>
                 <td>Terça</td>
-                <td>icon</td>
+                <td><i class="wi wi-day-rain"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
             <tr>
                 <td>Quarta</td>
-                <td>icon</td>
+                <td><i class="wi wi-day-lightning"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
             <tr>
                 <td>Quinta</td>
-                <td>icon</td>
+                <td><i class="wi wi-day-windy"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
             <tr>
                 <td>Sexta</td>
-                <td>icon</td>
+                <td><i class="wi wi-cloudy"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
             <tr>
                 <td>Sábado</td>
-                <td>icon</td>
+                <td><i class="wi wi-day-cloudy"></i></td>
                 <td>27º</td>
                 <td>32º</td>
             </tr>
